syntax = "proto3";
option java_package = "com.game.proto";
option go_package = "/protoGen";


enum  InnerProtoCode{
  INNER_INVALID = 0;
  INNER_SERVER_HAND_SHAKE_REQ = -1;
  INNER_SERVER_HAND_SHAKE_RES = -2;
  INNER_HEART_BEAT_REQ = -3;
  INNER_HEART_BEAT_RES = -4;

  INNER_LOGIN_REQ = -5;
  INNER_LOGIN_RES = -6;

  INNER_PLAYER_DISCONNECT_REQ = -7;
  INNER_PLAYER_DISCONNECT_RES = -8;
}

message InnerHead {
  int64 id = 1;
}

message  InnerHeartBeatRequest{

}

message  InnerHeartBeatResponse{

}

message InnerLoginRequest {
  int64 sid = 1; //sessionId
  int64 roleId = 2;
}

message InnerLoginResponse {
  int64 sid = 1; //sessionId
  int64 roleId = 2;
}

message  InnerPlayerDisconnectRequest{
  int64 sid = 1;
  int64 roleId = 2;
}

message InnerPlayerDisconnectResponse{
  int64  sid = 1;
  int64  roleId = 2;
}



message InnerLoginWorldRequest {
  int64 roleId = 1;
  int64 gatewayServerUid = 2;
  int64 gameServerUid = 3;
  string name = 4;
  int64 sessionId = 5; // 网关id
}

message InnerLoginWorldResponse {
  int32 errorCode = 1;
  int64 unitId = 2;
}

message InnerLogoutNotify {
  int64 roleId = 1;
  int64 sessionId = 2;
}

message InnerLoginInitNotify {
  int64 roleId = 1;
}


message InnerServerHandShakeReq{
  int64  fromServerId = 1;
  string from_server_sid = 2;
  int32  fromServerType = 3;
}

message  InnerServerHandShakeRes{
  int64 fromServerId = 1;
  string from_server_sid = 2;
  int32  fromServerType = 3;

}

message KickOutRequest {
  int64 roleId = 1;
  int64 sid = 2;
  int32  reason = 3;
}

message KickOutResponse {
  int32 reason = 1;
}



