syntax = "proto3";
option java_package = "com.game.proto";
option go_package = "/protoGen";
message IntIntProto {
  int32 intValue1 = 1;
  int32 intValue2 = 2;
}


message Role {
  int64 id = 1;
  string name = 2;

}


message ItemProto{
  int32 itemId = 1;
  int32 count = 2;
}


message LoginRequest {
  int64 accountId = 1;  // 账号
  int64 roleId = 2; // 角色
  string loginToken = 3;  // login token
  int32 gameTicket = 4; // game ticket
  int32 serverId = 5; // 游戏服务器id
}

message LoginResponse {
  int32 errorCode = 1; // 错误码
  int64 serverTime = 2; // 服务器当前时间
  int64 roleId = 3;
}

message LogoutRequest {
  int64 sessionId = 1;
}

message LogoutResponse {
  int32 errorCode = 1;
}


message  PerformanceTestReq{
  int64 someId = 1;
  string someBody = 2;
}

message PerformanceTestRes{
  int64  someId = 1;
  string resBody = 2;
  int64  someIdAdd =3;
}